[gd_scene load_steps=20 format=3 uid="uid://cg8w61en2txnt"]

[ext_resource type="Script" uid="uid://c82r07h4ewek4" path="res://Scripts/thrower_enemy.gd" id="1_0cx0c"]
[ext_resource type="Texture2D" uid="uid://lele1fp53q6o" path="res://assets/spritesandtiles/goblinspritesheet.png" id="2_0cx0c"]
[ext_resource type="PackedScene" uid="uid://cqseq1rcfs8q" path="res://scenes/killzone.tscn" id="3_koima"]
[ext_resource type="PackedScene" uid="uid://cb36ge76xiosx" path="res://scenes/health_bar.tscn" id="4_bjy53"]
[ext_resource type="Texture2D" uid="uid://j40q2fs3ja1e" path="res://assets/UI/health2.png" id="5_gmpdq"]
[ext_resource type="FontFile" uid="uid://com1nmermv0vi" path="res://assets/fonts/04B_30__.TTF" id="6_x5gi3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6ecdj"]
atlas = ExtResource("2_0cx0c")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_koima"]
atlas = ExtResource("2_0cx0c")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjy53"]
atlas = ExtResource("2_0cx0c")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmpdq"]
atlas = ExtResource("2_0cx0c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5gi3"]
atlas = ExtResource("2_0cx0c")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e17q"]
atlas = ExtResource("2_0cx0c")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgwal"]
atlas = ExtResource("2_0cx0c")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_aohpx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ecdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_koima")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjy53")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmpdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5gi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e17q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgwal")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_spfow"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b6kot"]
radius = 8.0

[sub_resource type="Curve" id="Curve_c4w8v"]
_data = [Vector2(0, 0.950035), 0.0, 0.0, 0, 0, Vector2(1, 0.504892), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_c4w8v"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.717647)

[sub_resource type="CircleShape2D" id="CircleShape2D_0cx0c"]
radius = 209.764

[node name="throwerEnemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_0cx0c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_aohpx")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_spfow")

[node name="killzone" parent="." instance=ExtResource("3_koima")]
collision_layer = 0
collision_mask = 1
monitorable = false
hurtDelay = 0.35

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_b6kot")
debug_color = Color(0.913616, 0.0984373, 0.671985, 0.42)

[node name="HealthBar" parent="." instance=ExtResource("4_bjy53")]
offset_left = -7.0
offset_top = -18.0
offset_right = 7.0
offset_bottom = -16.0
texture_under = ExtResource("5_gmpdq")
texture_progress = ExtResource("5_gmpdq")
tint_under = Color(0, 0, 0, 1)
health = false
enemy = true

[node name="Hit" type="CPUParticles2D" parent="."]
position = Vector2(0, -7)
scale = Vector2(50, 50)
emitting = false
amount = 12
lifetime = 0.2
one_shot = true
speed_scale = 0.9
explosiveness = 1.0
lifetime_randomness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 4.0
initial_velocity_max = 4.0
linear_accel_min = 1.0
linear_accel_max = 1.0
scale_amount_min = 0.8
scale_amount_max = 2.4
scale_amount_curve = SubResource("Curve_c4w8v")
color = Color(0.392157, 0, 0, 1)
color_ramp = SubResource("Gradient_c4w8v")

[node name="Health" type="RichTextLabel" parent="."]
visible = false
offset_left = -7.0
offset_top = -25.0
offset_right = 53.0
offset_bottom = -4.0
scale = Vector2(0.237771, 0.333608)
theme_override_fonts/normal_font = ExtResource("6_x5gi3")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]100[/center]"

[node name="RayCast2D1" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(10, -2)
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-10, -2)
collision_mask = 2

[node name="RayCast2D3" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(6, 7)
collision_mask = 2

[node name="RayCast2D4" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-6, 7)
collision_mask = 2

[node name="targetzone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="targetzone"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_0cx0c")

[node name="throwreload" type="Timer" parent="."]
one_shot = true

[node name="Death" type="CPUParticles2D" parent="."]
position = Vector2(0, -6)
scale = Vector2(50, 50)
emitting = false
amount = 220
lifetime = 0.05
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
lifetime_randomness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 4.0
initial_velocity_max = 4.0
linear_accel_min = 1.0
linear_accel_max = 1.0
scale_amount_min = 0.5
scale_amount_max = 2.0
color = Color(0.338849, 0.526211, 0.813686, 1)

[connection signal="body_entered" from="targetzone" to="." method="_on_targetzone_body_entered"]
[connection signal="body_exited" from="targetzone" to="." method="_on_targetzone_body_exited"]
[connection signal="timeout" from="throwreload" to="." method="_on_throwreload_timeout"]
